finish first section image

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Anger is creative Software Landing page, corporate, simple and clean template, Based on Bootstrap responsive multipurpose business agency and portfolio HTML template with unique home page demos"
+      content="אריאלה ליסבונה הינה צלמת מקצועית בתחום האופנה, דואגת לכל הפרטים הגדולים והקטנים על מנת להקים הפקת אופנה יפה מושקעת ובלתי נשכחת"
     />
     <meta
       name="keywords"
-      content="creative, fullscreen, business, software landing page, one page, bootstrap responsive, start-up, ui/ux, html template, css3, studio, branding, creative design, multipurpose, multi-purpose, parallax, personal, masonry, grid, coming soon, carousel, agency"
+      content="photoela, פוטואלה, אריאלה ליסבונה, הפקת אופנה, צילום, סטיילינג "
     />
 
     <!-- SITE TITLE -->
     <title>
-      Anger - Creative Responsive Software Landing page HTML Template
+      PhotoEla - be in style
     </title>
     <!-- Favicon Icon -->
     <link
@@ -132,6 +132,7 @@
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
             aria-label="Toggle navigation"
+            style="margin-top: 27px;"
           >
             <span class="ion-android-menu"></span>
           </button>
@@ -184,21 +185,70 @@
               class="carousel_slide2 owl-carousel owl-theme dots_white"
               data-autoplay="true"
               data-loop="true"
-              data-autoplay-timeout="3500"
+              data-autoplay-timeout="2000"
             >
               <div class="item">
                 <div class="overlay_bg2 zindex_minus1">
                   <img
-                    src="assets/images/portfolio_item22_640X426.jpg"
-                    alt="portfolio_item22_640X426"
+                    src="assets/images/about/about-1.png"
+                    alt="תמונה 1 עלי"
+                  />
+                </div>
+              </div>
+              
+              <div class="item">
+                <div class="overlay_bg2 zindex_minus1">
+                  <img
+                    src="assets/images/about/about-3.png"
+                    alt="תמונה 3 עלי"
                   />
                 </div>
               </div>
               <div class="item">
                 <div class="overlay_bg2 zindex_minus1">
                   <img
-                    src="assets/images/portfolio_item19_640X426.jpg"
-                    alt="portfolio_item19_640X426"
+                    src="assets/images/about/about-2.png"
+                    alt="תמונה 2 עלי"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="overlay_bg2 zindex_minus1">
+                  <img
+                    src="assets/images/about/about-4.png"
+                    alt="תמונה 4 עלי"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="overlay_bg2 zindex_minus1">
+                  <img
+                    src="assets/images/about/about-5.png"
+                    alt="תמונה 5 עלי"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="overlay_bg2 zindex_minus1">
+                  <img
+                    src="assets/images/about/about-6.png"
+                    alt="תמונה 6 עלי"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="overlay_bg2 zindex_minus1">
+                  <img
+                    src="assets/images/about/about-7.png"
+                    alt="תמונה 7 עלי"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="overlay_bg2 zindex_minus1">
+                  <img
+                    src="assets/images/about/about-8.png"
+                    alt="תמונה 8 עלי"
                   />
                 </div>
               </div>
@@ -490,9 +540,8 @@
                 </p>
 
                 <a
-                  href="https://wa.me/972507387355?text=%D7%A9%D7%9C%D7%95%D7%9D%20%D7%94%D7%92%D7%A2%D7%AA%D7%99%20%D7%90%D7%9C%D7%99%D7%99%D7%9A%20%D7%9E%D7%94%D7%90%D7%AA%D7%A8%20%D7%A9%D7%9C%D7%9A%20%D7%95%D7%90%D7%A0%D7%99%20%D7%99%D7%95%D7%A6%D7%A8%D7%AA%20%D7%90%D7%99%D7%AA%D7%9A%20%D7%A7%D7%A9%D7%A8%20%D7%9C%D7%92%D7%91%D7%99"
-                  target="_blank"
-                  class="btn btn-outline-default btn-radius"
+                  href="#contact-us"
+                  class="btn btn-outline-default btn-radius page-scroll"
                   >ליצירת קשר לחץ כאן</a
                 >
               </div>
