insert pic of final project

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                       </div>
                       <div class="skill_content pr_style1">
                         <div class="progrees_bar_text">
-                          <b>התאמת צבעים</b>
+                          <b>סטיילינג</b>
                         </div>
                         <div class="progress pr_style1">
                           <div class="count_pr">
@@ -483,7 +483,7 @@
                   box_shadow2
                   md-height-300
                 "
-                data-img-src="demo-wedding/images/event_img.jpg"
+                data-img-src="./assets/images/final-project/1.png"
               ></div>
               <div
                 class="
@@ -493,7 +493,107 @@
                   box_shadow2
                   md-height-300
                 "
-                data-img-src="demo-wedding/images/event_img2.jpg"
+                data-img-src="./assets/images/final-project/2.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/3.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/4.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/5.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/6.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/7.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/8.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/9.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/10.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/11.png"
+              ></div>
+              <div
+                class="
+                  h-100
+                  background_bg
+                  radius_box_10
+                  box_shadow2
+                  md-height-300
+                "
+                data-img-src="./assets/images/final-project/12.png"
               ></div>
             </div>
           </div>
@@ -524,8 +624,12 @@
                     <i class="ti-camera"></i>
                   </li>
                   <li>
-                    מאפרת: אריאלה ליסבונה
+                    סטיילינג: אריאלה ליסבונה
                     <i class="ti-pencil"></i>
+                  </li>
+                  <li>
+                    מאפרת: אריאלה ליסבונה
+                    <i class="ti-palette"></i>
                   </li>
                   <li>
                     עריכה: אריאלה ליסבונה
