add version to styleshhet

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- Magnific Popup CSS -->
   <link rel="stylesheet" href="assets/css/magnific-popup.css" />
   <!-- Style CSS -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css?v=1" />
   <link rel="stylesheet" href="assets/css/responsive.css" />
   <!-- Demo Wedding Style CSS -->
   <link rel="stylesheet" href="demo-wedding/css/demo-wedding.css" />
