fix final project photo

--- a/index.html
+++ b/index.html
@@ -345,84 +345,43 @@
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/1.png"></div>
+                " data-img-src="./assets/images/final-project/1.jpg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/2.png"></div>
+                " data-img-src="./assets/images/final-project/2.jpeg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/3.png"></div>
+                " data-img-src="./assets/images/final-project/3.jpeg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/4.png"></div>
+                " data-img-src="./assets/images/final-project/4.jpeg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/5.png"></div>
+                " data-img-src="./assets/images/final-project/5.jpeg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/6.png"></div>
-            <div class="
-                  h-100
-                  background_bg
-                  radius_box_10
-                  box_shadow2
-                  md-height-500
-                " data-img-src="./assets/images/final-project/7.png"></div>
-            <div class="
-                  h-100
-                  background_bg
-                  radius_box_10
-                  box_shadow2
-                  md-height-500
-                " data-img-src="./assets/images/final-project/8.png"></div>
-            <div class="
-                  h-100
-                  background_bg
-                  radius_box_10
-                  box_shadow2
-                  md-height-500
-                " data-img-src="./assets/images/final-project/9.png"></div>
-            <div class="
-                  h-100
-                  background_bg
-                  radius_box_10
-                  box_shadow2
-                  md-height-500
-                " data-img-src="./assets/images/final-project/10.png"></div>
-            <div class="
-                  h-100
-                  background_bg
-                  radius_box_10
-                  box_shadow2
-                  md-height-500
-                " data-img-src="./assets/images/final-project/11.png"></div>
-            <div class="
-                  h-100
-                  background_bg
-                  radius_box_10
-                  box_shadow2
-                  md-height-500
-                " data-img-src="./assets/images/final-project/12.png"></div>
+                " data-img-src="./assets/images/final-project/6.jpeg"></div>
+            
           </div>
         </div>
         <div class="col-lg-4 col-md-12">
