fix final project pictures

--- a/index.html
+++ b/index.html
@@ -359,28 +359,28 @@
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/3.jpeg"></div>
+                " data-img-src="./assets/images/final-project/3.jpg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/4.jpeg"></div>
+                " data-img-src="./assets/images/final-project/4.jpg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/5.jpeg"></div>
+                " data-img-src="./assets/images/final-project/5.jpg"></div>
             <div class="
                   h-100
                   background_bg
                   radius_box_10
                   box_shadow2
                   md-height-500
-                " data-img-src="./assets/images/final-project/6.jpeg"></div>
+                " data-img-src="./assets/images/final-project/6.jpg"></div>
             
           </div>
         </div>
