firt draft website

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
             <li>
               <a class="nav-link page-scroll" href="#gallery">גלריה</a>
             </li>
-            <li>
+            <!-- <li>
               <a class="nav-link page-scroll" href="#pricing">מחירון</a>
             </li>
             <li>
               <a class="nav-link page-scroll" href="#people">מה הלקוחות אומרים</a>
-            </li>
+            </li> -->
             <li>
               <a class="nav-link page-scroll" href="#contact-us">צור קשר</a>
             </li>
@@ -327,7 +327,7 @@
                 צילמתי את הפרויקט בגן הילדים הנטוש מכל ילד כהזדהות עם תקופת הקורונה שסגרה את כולנו בבתים ועד כמה ייחלנו
                 לראות שוב את גני הילדים חוזרים ומתמלאים בחיים.
               </p>
-              <a href="#gallery" class="btn btn-outline-default btn-radius page-scroll">ראה עוד עבודות</a>
+              <a href="#gallery" class="btn btn-outline-default btn-radius page-scroll d-none d-md-block">ראה עוד עבודות</a>
             </div>
           </div>
         </div>
@@ -443,7 +443,6 @@
             <li><a href="#" class="current" data-filter="*">הכל</a></li>
             <li><a href="#" data-filter=".engagement">פרוייקט גמר מכללת פרוג</a></li>
             <li><a href="#" data-filter=".ceremony">הנכדות של סבתא</a></li>
-            <li><a href="#" data-filter=".party">משהו אחר</a></li>
           </ul>
         </div>
       </div>
@@ -461,9 +460,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item engagement ceremony">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img1.jpg">
+                <a href="./assets/images/gallery/6-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img1.jpg" alt="image" />
+                    <img src="./assets/images/gallery/6.jpg" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -475,9 +474,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item ceremony party">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img2.jpg">
+                <a href="./assets/images/gallery/13-big.png">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img2.jpg" alt="image" />
+                    <img src="./assets/images/gallery/13.png" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -489,9 +488,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item engagement">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img3.jpg">
+                <a href="./assets/images/gallery/2-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img3.jpg" alt="image" />
+                    <img src="./assets/images/gallery/2.png" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -517,9 +516,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item engagement">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img7.jpg">
+                <a href="./assets/images/gallery/9-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img7.jpg" alt="image" />
+                    <img src="./assets/images/gallery/9.jpg" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -531,9 +530,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item engagement">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img8.jpg">
+                <a href="./assets/images/gallery/7-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img8.jpg" alt="image" />
+                    <img src="./assets/images/gallery/7.jpg" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -573,9 +572,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item engagement party">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img11.jpg">
+                <a href="./assets/images/gallery/8-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img11.jpg" alt="image" />
+                    <img src="./assets/images/gallery/8.jpg" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -615,9 +614,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item ceremony">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img10.jpg">
+                <a href="./assets/images/gallery/12-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img10.jpg" alt="image" />
+                    <img src="./assets/images/gallery/12.jpg" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -629,9 +628,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item engagement ceremony party">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img14.jpg">
+                <a href="./assets/images/gallery/11-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img14.jpg" alt="image" />
+                    <img src="./assets/images/gallery/11.jpg" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -643,9 +642,9 @@
             <!-- START PORTFOLIO ITEM -->
             <li class="portfolio-item engagement ceremony party">
               <div class="image_gallery_item">
-                <a href="demo-wedding/images/gallery_img12.jpg">
+                <a href="./assets/images/gallery/10-big.jpg">
                   <div class="gallery_img">
-                    <img src="demo-wedding/images/gallery_small_img12.jpg" alt="image" />
+                    <img src="./assets/images/gallery/10.jpg" alt="image" />
                   </div>
                   <div class="gallary_hover_box">
                     <i class="ti-zoom-in"></i>
@@ -662,7 +661,7 @@
   <!-- END SECTION GALLERY -->
 
   <!-- START PRICING TABLE -->
-  <section id="pricing" class="small_pb small_pt">
+  <section id="pricing" class="small_pb small_pt d-none">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2">
@@ -760,7 +759,7 @@
   <!-- START PRICING TABLE -->
 
   <!-- START SECTION TESTIMONIAL -->
-  <section class="small_pt" id="people">
+  <section class="small_pt d-none" id="people">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
